Refatoração do sistema